Fixed cutoff thumbnail labels.

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -392,3 +392,8 @@ div.tablerow .lastModified {
 ul.toc {
   width: 270px;
 }
+
+/* Fixes cutoff thumbnail labels */
+.panel-thumbnail-view > ul.panel-listing-thumbs > li {
+  margin-bottom: 11px !important;
+}
